--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -33,7 +33,7 @@
 @media (max-width: 425px) {
 
     body {
-        background: hsl(257, 40%, 49%) url(../images/bg-mobile.svg) center center;
+        background: hsl(257, 40%, 49%) url(../images/bg-mobile.svg) center center no-repeat;
         max-width: 100%;
         max-height: 100%;
     }
@@ -65,7 +65,7 @@
     .container .introduction .title {
         text-align: center;
         margin-right: 20px;
-        font-size: 30px;
+        font-size: 25px;
     }
 
     .container .introduction .info {
@@ -84,7 +84,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 20px 0 30px 0;
+        margin: 10px 0 30px 0;
         padding-right: 0;
     }
 }
