Arrumado o background e os ícones de redes sociais e refatorado todo o responsivo, alterando break point de 1024px para 1080px e deixando melhor a responsividade, e o mesmo no break point 425px que foi alterado para 580px e incluído o de 790px. E também alterado os caminhos para funcionar no GitPages

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,10 +1,10 @@
 body {
-    background: hsl(257, 40%, 49%) url(../images/bg-desktop.svg) center center no-repeat;
+    background: hsl(257, 40%, 49%) url(../images/bg-desktop.svg) center no-repeat;
+    background-size: cover;
     font-family: 'Poppins';
     color: #FFF;
     max-width: 1440px;
-    max-height: 900px;
-    width: 100%;
+    height: 100vh;
     margin: 0 auto;
 }
 
@@ -65,7 +65,7 @@ body {
     justify-content: flex-end;
     width: 100%;
     gap: 20px;
-    padding-right: 20px;
+    padding-right: 60px;
 }
 
 .footer nav {
@@ -78,8 +78,12 @@ body {
     font-size: 18px;
     transition: 0.3s ease-in-out;
     border-radius: 50%;
-    padding: 10px;
+    width: 40px;
+    height: 40px;
+
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer i:hover {
